# lue

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  package.json
.nix-home/.cargo/: .global-cache
.nix-home/.cargo/registry/cache/index.crates.io-1949cf8c6b5b557f/: const-serialize-0.6.2.crate  const-serialize-macro-0.6.2.crate  const_format-0.2.36.crate  data-encoding-2.11.0.crate  dioxus-0.6.3.crate  dioxus-cli-config-0.6.3.crate  dioxus-config-macro-0.6.2.crate  dioxus-core-0.6.3.crate  dioxus-core-macro-0.6.3.crate  dioxus-core-types-0.6.2.crate  dioxus-devtools-0.6.2.crate  dioxus-devtools-types-0.6.2.crate  dioxus-document-0.6.3.crate  dioxus-fullstack-0.6.3.crate  dioxus-history-0.6.2.crate  dioxus-hooks-0.6.2.crate  dioxus-html-0.6.3.crate  dioxus-html-internal-macro-0.6.2.crate  dioxus-interpreter-js-0.6.2.crate  dioxus-lib-0.6.2.crate  dioxus-logger-0.6.2.crate  dioxus-rsx-0.6.2.crate  dioxus-signals-0.6.3.crate  dioxus-web-0.6.3.crate  dioxus_server_macro-0.6.2.crate  enumset-1.1.10.crate  enumset_derive-0.14.0.crate  generational-box-0.6.2.crate  gloo-net-0.6.0.crate  gloo-utils-0.2.0.crate  konst-0.2.20.crate  konst_macro_rules-0.2.19.crate  lazy-js-bundle-0.6.2.crate  longest-increasing-subsequence-0.1.0.crate  manganis-0.6.2.crate  manganis-core-0.6.2.crate  manganis-macro-0.6.2.crate  serde_qs-0.12.0.crate  server_fn-0.6.15.crate  server_fn_macro-0.6.15.crate  (+12 more)
.nix-home/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/const-serialize-0.6.2/: .cargo_vcs_info.json  Cargo.toml
.nix-home/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/const-serialize-macro-0.6.2/: .cargo_vcs_info.json  Cargo.toml
.nix-home/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/dioxus-0.6.3/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
.nix-home/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/dioxus-cli-config-0.6.3/: .cargo_vcs_info.json  Cargo.toml
.nix-home/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/dioxus-config-macro-0.6.2/: .cargo_vcs_info.json  Cargo.toml
.nix-home/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/dioxus-core-0.6.3/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
crates/server/: Cargo.toml
crates/server/src/: auth.rs  main.rs  model.rs  password.rs  persistence.rs  store.rs  utils.rs  ws.rs
crates/shared/: Cargo.toml
crates/shared/src/: admin.rs  lib.rs  messages.rs  queue.rs
crates/web/: Cargo.toml
crates/web/assets/: style.css
crates/web/src/: app.rs  main.rs  models.rs  route.rs  storage.rs  styles.rs  view_helpers.rs  ws.rs
crates/web/src/components/: admin_queue_detail.rs  loading.rs  mod.rs  ui.rs
crates/web/src/pages/: admin.rs  home.rs  mod.rs  queue.rs
deploy/: nginx.conf
(+122 files in other folders)
