[package]
name = "server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
argon2 = "0.5"
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", features = ["clock"] }
dotenvy = "0.15"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["serde", "v4"] }
