[package]
name = "server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
argon2 = "0.5"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
dotenvy = "0.15"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
shared = { path = "../shared" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net"] }
tower-http = { version = "0.5", features = ["cors"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
