[package]
name = "web"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
base64 = "0.22"
dioxus = { version = "0.6", features = ["web"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
uuid = { version = "1", features = ["serde", "v4"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "History",
    "HtmlInputElement",
    "Location",
    "MessageEvent",
    "Storage",
    "Window",
    "WebSocket",
] }
js-sys = "0.3"
